# apppack-docs

./: .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  changelog_aggregation.yml  ci_cd.yml
_specs/: CHANGELOG_AGGREGATOR_SPEC.md
screencasts/: README.md  apppack_auth_accounts.cast  apppack_auth_login.cast  apppack_create_cluster.cast  apppack_create_cluster_unedited.cast  apppack_create_custom-domain.cast  apppack_create_custom-domain_unedited.cast  apppack_create_database.cast  apppack_create_database_unedited.cast  apppack_create_redis.cast  apppack_create_redis_unedited.cast
scripts/: aggregate_changelogs.py
src/: _navigation.md  github-actions.md  index.md  install.md  review-apps.md  setup.md  under-the-hood.md  why-apppack.md
src/addons/: database.md  redis.md  s3.md  ses.md  sqs.md
src/how-to/: apps.md  choose-aws-region.md  config-variables.md  custom-domains.md  deploy-django-app.md  destroy-app.md  install.md  review-apps.md  sending email.md  using-databases.md  using-redis.md  using-s3.md  using-sqs.md  working-with-files.md
src/how-to/add-ons/: using-databases.md  using-redis.md  using-s3.md  using-sqs.md
src/how-to/apps/: apppack_toml.md  apps.md  config-variables.md  deploy-django-app.md  destroy-app.md  dockerfile-builds.md  releases.md  review-apps.md
src/how-to/domains/: bring-your-own-cluster-domain.md  custom-domains.md
src/how-to/set-up/: choose-aws-region.md  create-docker-hub-access-token.md  github-actions.md  github-aws-connection.md  github-deployment.md
src/stylesheets/: extra.css
src/tutorials/: deploy-first-app.md  initial-setup.md
src/under-the-hood/: aws_security_standards_compliance.md  domains.md  how-apppack-works.md  index.md  pricing.md
theme_overrides/: main.html
