[project]
name = "apppack_docs"
version = "0.9"
description = "Documentation for AppPack.io"
authors = [
    {name = "Peter Baumgartner", email = "pete@lincolnloop.com"},
]
dependencies = ["mkdocs", "mkdocs-literate-nav", "mkdocs-material", "mkdocs-macros-plugin", "setuptools", "pymdown-extensions"]
requires-python = ">=3.14"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/apppackio/apppack-docs"
